# ChangeLog for net-misc/cgminer
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/cgminer/ChangeLog,v 1.56 2013/12/26 16:29:58 blueness Exp $

*cgminer-3.9.0 (26 Dec 2013)

  26 Dec 2013; Anthony G. Basile <blueness@gentoo.org> +cgminer-3.9.0.ebuild,
  -cgminer-3.8.4.ebuild, cgminer-3.8.5.ebuild, metadata.xml:
  Version bump

*cgminer-3.8.5 (10 Dec 2013)

  10 Dec 2013; Anthony G. Basile <blueness@gentoo.org> +cgminer-3.8.5.ebuild,
  cgminer-3.8.4.ebuild:
  Version bump

  07 Dec 2013; Anthony G. Basile <blueness@gentoo.org> -cgminer-3.8.3.ebuild,
  cgminer-3.8.4.ebuild:
  Add udev rule, bug #493234.  Remove older.

*cgminer-3.8.4 (02 Dec 2013)

  02 Dec 2013; Anthony G. Basile <blueness@gentoo.org> +cgminer-3.8.4.ebuild,
  -cgminer-3.8.2.ebuild, cgminer-3.8.3.ebuild:
  Version bump, remove older 3.8

*cgminer-3.8.3 (24 Nov 2013)

  24 Nov 2013; Anthony G. Basile <blueness@gentoo.org> +cgminer-3.8.3.ebuild,
  -cgminer-3.8.1.ebuild, cgminer-3.8.2.ebuild:
  Version bump, remover older

*cgminer-3.8.2 (16 Nov 2013)

  16 Nov 2013; Anthony G. Basile <blueness@gentoo.org> +cgminer-3.8.2.ebuild,
  cgminer-3.8.1.ebuild:
  Version bump

  13 Nov 2013; Anthony G. Basile <blueness@gentoo.org> cgminer-3.8.1.ebuild:
  Remove ADL_SDK, bug #491026 comment 9

  12 Nov 2013; Anthony G. Basile <blueness@gentoo.org> cgminer-3.8.1.ebuild:
  Keyword ~arm, bug #491026 comment 2

*cgminer-3.8.1 (12 Nov 2013)

  12 Nov 2013; Anthony G. Basile <blueness@gentoo.org> +cgminer-3.8.1.ebuild,
  cgminer-3.7.2.ebuild:
  Version bump, bug #491026, thanks Sarah White <kuzetsa@gmail.com>

*cgminer-3.7.2 (05 Nov 2013)

  05 Nov 2013; Anthony G. Basile <blueness@gentoo.org> +cgminer-3.7.2.ebuild,
  cgminer-3.6.6.ebuild, metadata.xml:
  Version bump

*cgminer-3.6.6 (26 Oct 2013)

  26 Oct 2013; Anthony G. Basile <blueness@gentoo.org> +cgminer-3.6.6.ebuild,
  -cgminer-3.6.4.ebuild:
  Version bump, remove older
