@@ -4,6 +4,7 @@ Hash: SHA256
 DIST cgminer-3.6.6.tar.bz2 2390408 SHA256 2155404e32baea27447da001725a78c83fd33a89b7984ce04b32564d263bb382 SHA512 1f913118fd3a2757a9fa9b2ffb8f1527109e90626044362ce94bbf93e876448cace189bc6c6e0c28f33d71ecc0488312d60530ef20baadf9894e82891b15171d WHIRLPOOL 709185ec229c38c6a00a7bfaaa1ba95fa7c6da58379097212f6df0f85938dcece025ec61fb57a9d6b0fbd7c194552188661579f5392a78e9d1c40eb2742aa1cd
 DIST cgminer-3.7.2.tar.bz2 2413059 SHA256 ff0944489642a3eabd24840d1dfabafb6184a9d3ad682f7c76e2fae18f93a90d SHA512 9596dbf2225f884b6a41d3f82fd6dacfc83aa20e21c62e2aad44d60cf96658ab7bc0c5cdd26c5c00a18f639ce3998718687df56a3f4d0bc33349076f5dd8514c WHIRLPOOL dc115840d2cb9e28e346c7cbcd558c26de196069add29f2b7f70992c9572a27fa6c8501e7e2211c716c99c7dfe56bc2e604e3c33783391930af63a70a7241b12
 DIST cgminer-3.8.5.tar.bz2 2356614 SHA256 d84b50f4eae531629d8a4054481ae0a00b2ba81f2a0dae476ee8def2c309a6ba SHA512 5b628e3d8d880ad5c4b0a8699e00edde04dd1dea6bcd09734dcde7e799b3a3198aa37f911ed4ada2c9e724e91b9659ee12b0d8b5eeb116f1dfb263476a4b42f3 WHIRLPOOL 6cdb95c82324248c80b80c39a6852ccf38d9e844f9f4e97cd0bc487dfbd43e4f4fc97098aed98c2e7125d6c9732d91db42cd314016225c2683511f64a6bb765a
+DIST cgminer-3.9.0-1.tar.bz2 2259570 SHA256 3d1a5d2caf168cff106d6283c7cfbb145d8b6d4493bf495b1dffc4e199da0d55 SHA512 aff6e9dda9dd4a3a6d3bacc78803a19226b729b91a5fef988fc1d503ee9b49069b28752be2bb79e63771ec3c463fc5e4bdaae0e9d22ca009b7f2fdf92b4742dd WHIRLPOOL 1e26e84d3110f7717a79d6c798a1bc36732fa7093c25c8fa0d98cdb907f5586a5f52bfc88d2569c5ef3033493d28a89b4044b18b41ad088b06fdf5546dae8e9b
 DIST cgminer-3.9.0.tar.bz2 2368471 SHA256 f4a9af3e5e08919cfc9ca26628d63e7a3f8e986ebfa358b7316a79b1e8621790 SHA512 a9b9df74f6517f39a334993b4bdd378217e7b091536f99b294c06d3c41de81d511504cbf9acc0b16167ce97319b0cd4faa42949b21d519cebe7249dd1204bace WHIRLPOOL 84b7087fb56d00e91a007194a62da6801932e20ab1d3528c9394b9e44f73056e38fd944789071af35ef6961c6230cb3fcaf5a4256b73164207f9b5955bc9f5d7
 DIST v3.4.3.tar.gz 6473497 SHA256 3b44da12e5f24f603eeeefdaa2c573bd566c5c50c9d62946f198e611cd55876b SHA512 72760a9d340b6c76c652bcbc4b36cdf82f551c9edfa824b0c82022f8ab3267ae9891ec822bfbfe96c226ebd554caad02f06e3cbdcae867c832e5739627e29064 WHIRLPOOL df571cde83087c7c430f4098af6708ae772f863599aa0dcf4a9cafbb7303ddf2fd25db2ac58d95b895ca17b94bf56fc843388065f4ed9cec8755961d3470b955
 DIST v3.5.0.tar.gz 6478443 SHA256 58eef9155557627ceaf4a90da4bf4df91c0ae0c3d737c99fd6ed26022d57cca7 SHA512 889d8c81eb392b4c489aebcbe9a7a6186f3975dcaad9e9d24f3c34cf4de6b96eb1086113cd770b573472ca27e9187f6cf1e08e7b1dc19094f3f252c9469c90a4 WHIRLPOOL a916735cfab5ec79b9dcd59f29ccd66a48201cf8a2bd0ccec127cb9fd2fa1a8cbd00677f557066ef1a98b7b9e4c6dd92d3266aaef3236ec76d8b4a75a39c103c
@@ -12,23 +13,24 @@ EBUILD cgminer-3.5.0.ebuild 2392 SHA256 df7d0b89da708ceaea2d547e37a5abb26d570200
 EBUILD cgminer-3.6.6.ebuild 2246 SHA256 37af5c65b88927b277c7b23560e06493e20f05cfdd4839912c5217aaac2b56e0 SHA512 61c7ade93afc4ff53b380a02e770dff63e07b0e1043804d53c3223d4847b6f82139278a26762f971777131188d927b1ebcfdcaed7b3ec074cc24531fa20e97a8 WHIRLPOOL 2058df81103247feec17631f4f4950722432c5ac5dae36270fb726e288ad964fe81ad77ba3ba907fca81cf2241971ba9a0aac15239e05ad11424006d7ac631cc
 EBUILD cgminer-3.7.2.ebuild 2319 SHA256 22731c3356fb46512e17b22c4433a69ce83f8357501b9f7c876bc29d852996c8 SHA512 7c34fc6601e9b672c41692be42b838ffec00223786cf34606b4ff3a50efc67d8054e2988361564f1d58cbbd0b51c22f7efafe47fe09896af034408e760491a18 WHIRLPOOL 634d745d640fa692095da5417afba64d930bfe245b623c01552af74cb1a3c4bb91527373e3643e5870e52b9281df79803648b8ce196434fa72026848b5488db6
 EBUILD cgminer-3.8.5.ebuild 2050 SHA256 34a66ff7bb6dbd51c8e1bcb877af683fe3b3803114e1c651e15bb434416de6e7 SHA512 0bc94ad1d0fb076317374353d40612de41c4137f4d4343dc247b5977fc96cf4b5dbd7041f59d5301d981f97ca3fad5273fc2382e97d6e0d95c8c3fc573c40b6a WHIRLPOOL ecf2928b4222e2599e9a9d8a0c0045c97d49c1e114ee47219908b5184ae5cdda9b7b3e2b4c01ee81d6d97f000d75715fd3eac9624abe76921598d6bb92252380
-EBUILD cgminer-3.9.0.ebuild 2095 SHA256 a9d96d3418f5e41ea4edc24e3e985650036b83ae0b9b689ea1602022ba831038 SHA512 1cf98a1f90071f96a28f2515837926d754fb87e46ff6f48a4b9e82f3e4fbb22e2482074c6507589216afa5ab0a9940f714b1d73c2be33608d0bfe14f361d0494 WHIRLPOOL 8c571e933f32deab73d6eea3f3840a0d5f5256d0856bf09479cbea7e7cdff01733f0a7ba722882eb842f9af4fa6a6b3d9a72b10ed8a73911d4d30bd1cdd83c3c
-MISC ChangeLog 9273 SHA256 fa51970618cb65b85718954384061114c457fb3118789893559bd3f80283953f SHA512 c496307e27f71ece35036f25c6b7f9d8fb3bac263bb5927ad7b5a1d2639168efe55f0075bfb872229538420c2df0fea76d7f68b18318d4a19d40422f180c810b WHIRLPOOL 77a7f311dbe1cbc01b0e4c3a86226c9db7b08d030ca5b552eba5c7a5177f0089209d2f204f785715e7f798ce2870ea3acd49ac308135f0ad91468d2d8a3aa1a3
+EBUILD cgminer-3.9.0.1.ebuild 2222 SHA256 f8ae1fc876b91b592e13c079fc1e23f7d35d5ad8758dfaa226557821ff8e5f3c SHA512 ded30dbc24bd6bf9591aa9b1748f5a64795571e5899272760a80f1d6dcbeee042e2a8a52d9bfebf1ee14150dfaf06e7ca9b6c402fab42f3ecbd71ddd454fcd2e WHIRLPOOL 8d9eaad28b46d4b5a4884c45336164f182f40c912735a5500585dd9fe6f382de25e86e4a95e60a3fca2ed544f75c0e96ed195de10a3454b2e0bad22c3e3a79ba
+EBUILD cgminer-3.9.0.ebuild 2095 SHA256 2e5e95217f81f7a47f822373e074eb3f4771b4fab1816b1637b97349cf6dca5d SHA512 7b265d5fa5efc6cfd30a7e9ed72dc187f3cea660e91fd33f61d812f8a2a2d2e8df20172ce2d185e2b4fac8c8d010a92b7a659bc7615e1079da5695fe87845a5e WHIRLPOOL add910f066f23ffc56881a36a8dd9311e8491cfe3d12ba7fb93fdd2610241d1f0799a3c6be2c72f51960ffe007bfbf06e3865fbc8c88e45313c75c964e04e1a0
+MISC ChangeLog 9425 SHA256 9814d7a13268507c2d8f7237b40620debd44ac76865f2b1334a4a8fb66bbbafa SHA512 a43219770f77fabd5b385e0d79458272eb376cc1cdb3b5031ad3d40128926d24350a7d11c4b084b4505040f207b064de96c920dc38cae0e41b8894892b8b482b WHIRLPOOL 066c226658a4afb06406d787e97ce869e45530e993272f9b867e448eaf4487bd5d92614b401a52fc76c7c7065e3bce6430c68f6c9ef974e206c918910d719134
 MISC metadata.xml 1344 SHA256 d8a6ab565974ca295cbcbed31c0f5367be9d5c001aebe38cb432d0766ea38651 SHA512 8fb1ecc4b849a883b61ba5f43241815dd34d780ad229aaea9bc762e0a5bae5c6663749157edede57c9180d9cf3876c8df02833dfe6d8b0acaac83b085dcb16af WHIRLPOOL 860614b7f9e935e0dc8bbe342263e285fb4228eb3dacb7bd0b1a1be513735380d5281addb1b0b7b3b38802983ef781bd4af4ea5db3b8ea3761111dfda58ca6f5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSvFm+AAoJEJOE+m71LUu6wyMP/0K0IVyKcY5f6EV9P0WURBC0
-0r5Ey6AoStavULOggx8WRkXiewMZ4sa0UtTSscvVHbhqr8LRJOYV7xZZhGlaH3GU
-KwnlVdDzYT8ny5ZUVofsYMIPNmSKba/zQ/MexHiSAeefQ1QG/0N31V4iOqNbuJjR
-2FGqkcUcokwhFBwSD4mU3HjDv556xE7gb8Pae4ZaadrG62RL7Q6Ki3dnbumZsXpl
-kTe7RpwdLZArUJfkUtwYLryn6WwcdgvkrOOQXIm4s8RKePa2tZ9VWwfXE5GF0lvn
-bwwgGvxAul4tWjSkWyF2k/eowq1bOI3kDOqrREo635A1IKTF7d2wGGKoMgdqNXZB
-c9OJ4WcLI3Wg8BI3SVkU6EkY3rkiyg204gAcGopKNx8xHuRHOGW6D1hjYBRJgIcT
-j2LQE3hAk6D5D2WPY2uVRtshKQvyiBNohfiworvAIS6kCZmBAdFD9jwS8cYMXze3
-RDVcakI7VC25AcyVE313JJ2Lmfs7Y+tlkvYRhwgRjdSqa0g1ktn4eNqhMPYidv2q
-4wR83vUa3SzILr5neR8tMSlzo+jFupmNnbpqo4t/CJL5WMMg1Q+vf5vv7F3TrPRE
-Msh3EasUkiB8zGqxqj6qt5ePda3X7YxhxxD1DU+n8nWBA2xZogShKR7LeZzDa0J7
-qjDkR+JTFrSMJfDnsQHZ
-=lAX6
+iQIcBAEBCAAGBQJSzeFjAAoJEJOE+m71LUu6jEcP/3W6vcjmzH9Uh8hLnD4cS0uN
+hNmKvsKlI8CU6cMFWunyEmoOF4U03QFDYfDhMn7LfqX2lnOInY4AeTnnRROzhFjR
+248GzG8ibkpmUMHo8ey7TI5AwWSJROET2zhl2nR3a2uPGfnR+ilNhxwYVM/fc9q4
+5CUbAedHW4oD15d+CM/hh4+TOXMCM76QW1NHwrl1x8eYIwX/YhlQCwA7H14CtfmY
+NZX4mTqwbnt/A2zHrGOlR2amiyGcb8Dxy1BUkWU7ThZSb2g1YgQB2UUnX5SZi454
+Er5eKD3Nf7gw2UQgI+HEhksJvfbZCWVk7CJ/Qpkoqoak5UxCPKplmlMgjjEgUTjz
+yPWI/IwZkJtVSBTAvSpRU+vxDpSrCSMvHHuH4r9E7EvG12UULx9pZdMogkpq4SKt
+dcOTAgF2gZVcv5fMsyMHwxyiBP+SCyLp33UN6Xp/Mx0fDjqRXiWmsjJxq+T9yMqh
+mG6KzB6NnYwXU3L4+s8cIDWtMWx4HZxuxD0ShJFrPYVVUW5sHcO2+EDcVuVAvN0D
+FA2HA2dJxg8dAUU2zSlK2L5xqaXH3hgQgnnpAt00aeqkMx3uMY7dBDZlom7nhmep
+YwOn8M9yLrtABD0wiWPf64bh0iTplULNEOWLDfAUQcWyWb+P+hLS6Zdf7arVFcaM
+i0nXiX9gZwgklD+KMcYS
+=zKQ2
 -----END PGP SIGNATURE-----
