@@ -1,15 +1,20 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/cgminer/cgminer-3.9.0.ebuild,v 1.2 2014/01/08 23:34:38 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/cgminer/cgminer-3.9.0.1.ebuild,v 1.1 2014/01/08 23:34:38 blueness Exp $
 
 EAPI=5
 
-inherit autotools flag-o-matic
+inherit autotools flag-o-matic versionator
+
+MY_PV="$(replace_version_separator 3 -)"
+
+#Some wierdness on upstream's part
+S=${WORKDIR}/${PN}-3.9.0
 
 DESCRIPTION="Bitcoin CPU/GPU/FPGA/ASIC miner in C"
 HOMEPAGE="http://bitcointalk.org/?topic=28402.msg357369 http://github.com/ckolivas/cgminer"
-#SRC_URI="http://ck.kolivas.org/apps/cgminer/${P}.tar.bz2"
-SRC_URI="http://ck.kolivas.org/apps/cgminer/3.9/${P}.tar.bz2"
+SRC_URI="http://ck.kolivas.org/apps/cgminer/${PN}-${MY_PV}.tar.bz2"
+#SRC_URI="http://ck.kolivas.org/apps/cgminer/3.9/${P}.tar.bz2"
 
 LICENSE="GPL-3"
 SLOT="0"
